- gh-67 Use checkstyle (m1ch1)
- gh-76 Implemented OrientDB client (lvca)
- gh-88 YCSB client for Amazon DynamoDB (jananin)

0.1.4 - 2/22/12 

- Fixes for Cassandra 0.7 client (tjake)
- New generator FileGenerator (nono)
- Fixes for MongoDB (nono)
- Fixes for Voldemort (nono)
- JDBC client (sudiptodas)
- HotspotIntegerGenerator (sudiptodas)	
- Optimizing cassandra7 (joaquincasares)
- Mysql key fix (joaquincasares)
- Added a db plugin for Infinispan (maniksurtani)
- gh-31 Support to stop benchmark after a maximum specified elapsed time. (sudiptodas)
- gh-35 Cassandra0.8 support (joaquincasares)
- gh-30 IllegalArgumentException with MongoDB (m1ch1)
- gh-27 MongoDbClient was not working with non localhost URLs (arunxarun)
- gh-29 Add simple sharding capabilities for JDBC driver (kibab)
- gh-40 Merge Redis database interface layer (lehmannro)
- gh-42 Response latencies are measured in microseconds (mikewied)
- gh-43 Variable length fields (sears)
- gh-44 Constant occupancy workload (sears)
- gh-45 Modify DB API for efficient large object support (sears)
- gh-46 Fixed typo in RedisClient (Zlender)
- gh-49 Build fix (sears)
- gh-50 Switch unordered key generation from FNV32 to FNV64 (sears)
- gh-51 Improved Random Number Generation Performance and add Exponential distribution support (sears)
- gh-52 Mongo db fix (sears)
- gh-54 Add mapkeeper driver (m1ch1)
- gh-57 voldemort - enable nio connector (akkumar)
- gh-58 benchmarking with hbase 0.90.5 (akkumar)
- gh-55 VMware vFabric GemFire (sbawaska)
- gh-59 Cassandra 1.0.6 (akkumar)
- gh-62 Oracle NoSQL Database Client (y-namiki)
- gh-64 Mavenisation of YCSB with a (tar ball) distribution packager (hariprasad-k)
- gh-65 Patch for improving the MongoDB Client (singhsiddharth)

0.1.3 - 10/26/10

= Voldemort binding (rsumbaly)
= HBase client improvements (ryanobjc)
= Fixes to Cassandra 0.7 binding (johanoskarsson, nickmbailey)